@@ -942,6 +942,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|codehaus
+operator|.
+name|jackson
+operator|.
+name|map
+operator|.
+name|ObjectReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -1141,6 +1155,24 @@ DECL|field|disallowFallbackToInsecureCluster
 specifier|private
 name|boolean
 name|disallowFallbackToInsecureCluster
+decl_stmt|;
+DECL|field|READER
+specifier|private
+specifier|static
+specifier|final
+name|ObjectReader
+name|READER
+init|=
+operator|new
+name|ObjectMapper
+argument_list|()
+operator|.
+name|reader
+argument_list|(
+name|Map
+operator|.
+name|class
+argument_list|)
 decl_stmt|;
 comment|/**    * Return the protocol scheme for the FileSystem.    *<p/>    *    * @return<code>webhdfs</code>    */
 annotation|@
@@ -2243,22 +2275,8 @@ argument_list|)
 throw|;
 block|}
 block|}
-name|ObjectMapper
-name|mapper
-init|=
-operator|new
-name|ObjectMapper
-argument_list|()
-decl_stmt|;
 return|return
-name|mapper
-operator|.
-name|reader
-argument_list|(
-name|Map
-operator|.
-name|class
-argument_list|)
+name|READER
 operator|.
 name|readValue
 argument_list|(
