@@ -2775,6 +2775,9 @@ Release 2.7.3 - UNRELEASED
     HDFS-9730. Storage ID update does not happen when there is a layout change
     (Tsz Wo Nicholas Sze via kihwal)
 
+    HDFS-9724. Degraded performance in WebHDFS listing as it does not reuse
+    ObjectMapper. (Akira AJISAKA via wheat9)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
